# calib-intrinsic

./: CMakeLists.txt  README.md  export_path.py
src/: CMakeLists.txt  calib_intrinsic.cpp
temp_and_result/: caliberation_result.txt
